--- a/dslr-qt-shooter/telescope/devicespanel.ui
+++ b/dslr-qt-shooter/telescope/devicespanel.ui
@@ -26,8 +26,9 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <widget class="QWidget" name="page"/>
-     <widget class="QWidget" name="page_2"/>
+     <property name="currentIndex">
+      <number>-1</number>
+     </property>
     </widget>
    </item>
   </layout>
