--- a/dslr-qt-shooter/resources.qrc
+++ b/dslr-qt-shooter/resources.qrc
@@ -14,4 +14,10 @@
       <file alias="11.jpg">files/testing/11.jpg</file>
       <file alias="12.jpg">files/testing/12.jpg</file>
   </qresource>
+  <qresource prefix="/telescope">
+    <file alias="led-blue">files/telescope/led-blue-sm.png</file>
+    <file alias="led-green">files/telescope/led-green-sm.png</file>
+    <file alias="led-red">files/telescope/led-red-sm.png</file>
+    <file alias="led-yellow">files/telescope/led-yellow-sm.png</file>
+  </qresource>
 </RCC>
