--- a/dslr-qt-shooter/telescope/telescoperemotecontrol.ui
+++ b/dslr-qt-shooter/telescope/telescoperemotecontrol.ui
@@ -52,6 +52,9 @@
       </item>
       <item row="0" column="2">
        <widget class="QPushButton" name="searchObject">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="text">
          <string>Search</string>
         </property>
