--- a/dslr-qt-shooter/telescope/telescoperemotecontrol.ui
+++ b/dslr-qt-shooter/telescope/telescoperemotecontrol.ui
@@ -37,9 +37,6 @@
       <item row="0" column="1">
        <widget class="QLineEdit" name="objectName"/>
       </item>
-      <item row="1" column="0" colspan="3">
-       <widget class="QListView" name="objects_results"/>
-      </item>
       <item row="2" column="2">
        <widget class="QPushButton" name="gotoObject">
         <property name="enabled">
@@ -59,6 +56,9 @@
          <string>Search</string>
         </property>
        </widget>
+      </item>
+      <item row="1" column="0" colspan="3">
+       <widget class="QTreeView" name="objects_results"/>
       </item>
      </layout>
     </widget>
