--- a/dslr-qt-shooter/telescope/telescoperemotecontrol.ui
+++ b/dslr-qt-shooter/telescope/telescoperemotecontrol.ui
@@ -50,7 +50,7 @@
       <item row="0" column="2">
        <widget class="QPushButton" name="searchObject">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string>Search</string>
