--- a/dslr-qt-shooter/ui/messageswindow.ui
+++ b/dslr-qt-shooter/ui/messageswindow.ui
@@ -33,6 +33,15 @@
    </item>
    <item row="1" column="0" colspan="2">
     <widget class="QTreeView" name="logs">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::ExtendedSelection</enum>
+     </property>
      <property name="wordWrap">
       <bool>true</bool>
      </property>
