--- a/dslr-qt-shooter/ui/dslr_shooter_window.ui
+++ b/dslr-qt-shooter/ui/dslr_shooter_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>772</width>
-    <height>794</height>
+    <height>911</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -138,7 +138,7 @@
      <x>0</x>
      <y>0</y>
      <width>772</width>
-     <height>28</height>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCamera">
@@ -152,7 +152,6 @@
     <property name="title">
      <string>&amp;Main</string>
     </property>
-    <addaction name="action_LogMessages"/>
     <addaction name="action_Quit"/>
    </widget>
    <widget class="QMenu" name="menuTelescope">
@@ -163,9 +162,20 @@
     <addaction name="action_Devices_Control_Panel"/>
     <addaction name="actionRemote_Control"/>
    </widget>
+   <widget class="QMenu" name="menuWindows">
+    <property name="title">
+     <string>Windows</string>
+    </property>
+    <addaction name="actionCamera_Information"/>
+    <addaction name="actionCamera_Setup"/>
+    <addaction name="actionGuider"/>
+    <addaction name="actionFocusing"/>
+    <addaction name="actionLogs_Messages"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuCamera"/>
    <addaction name="menuTelescope"/>
+   <addaction name="menuWindows"/>
   </widget>
   <widget class="QDockWidget" name="camera_information_dock">
    <property name="windowTitle">
@@ -625,6 +635,46 @@
   <action name="action_LogMessages">
    <property name="text">
     <string>&amp;Log Messages</string>
+   </property>
+  </action>
+  <action name="actionCamera_Information">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Camera Information</string>
+   </property>
+  </action>
+  <action name="actionCamera_Setup">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Camera &amp;Setup</string>
+   </property>
+  </action>
+  <action name="actionGuider">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Guider</string>
+   </property>
+  </action>
+  <action name="actionFocusing">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Focusing</string>
+   </property>
+  </action>
+  <action name="actionLogs_Messages">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Logs Messages</string>
    </property>
   </action>
  </widget>
