--- a/dslr-qt-shooter/ui/camera_setup.ui
+++ b/dslr-qt-shooter/ui/camera_setup.ui
@@ -91,7 +91,12 @@
      </item>
      <item>
       <property name="text">
-       <string>Repeat</string>
+       <string>Continuous</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Sequence</string>
       </property>
      </item>
     </widget>
@@ -157,13 +162,13 @@
       <item row="0" column="1">
        <widget class="QSpinBox" name="images_count">
         <property name="specialValueText">
-         <string>Infinite</string>
+         <string/>
         </property>
         <property name="suffix">
          <string> images</string>
         </property>
         <property name="minimum">
-         <number>0</number>
+         <number>1</number>
         </property>
         <property name="maximum">
          <number>999</number>
