--- a/dslr-qt-shooter/ui/imagesettingsdialog.ui
+++ b/dslr-qt-shooter/ui/imagesettingsdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>460</width>
-    <height>356</height>
+    <height>388</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
       <item>
        <widget class="QRadioButton" name="presetExposure">
         <property name="text">
-         <string>From Presets</string>
+         <string>From Prese&amp;ts</string>
         </property>
        </widget>
       </item>
@@ -33,7 +33,7 @@
       <item>
        <widget class="QRadioButton" name="manualExposure">
         <property name="text">
-         <string>Manual</string>
+         <string>&amp;Manual</string>
         </property>
        </widget>
       </item>
@@ -42,11 +42,25 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
+        <property name="minimumTime">
+         <time>
+          <hour>0</hour>
+          <minute>0</minute>
+          <second>1</second>
+         </time>
+        </property>
         <property name="currentSection">
-         <enum>QDateTimeEdit::SecondSection</enum>
+         <enum>QDateTimeEdit::HourSection</enum>
         </property>
         <property name="displayFormat">
          <string>HH:mm:ss</string>
+        </property>
+        <property name="time">
+         <time>
+          <hour>0</hour>
+          <minute>0</minute>
+          <second>1</second>
+         </time>
         </property>
        </widget>
       </item>
@@ -129,7 +143,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
