--- a/src/ui/dslr_shooter_window.ui
+++ b/src/ui/dslr_shooter_window.ui
@@ -33,7 +33,7 @@
      <x>0</x>
      <y>0</y>
      <width>772</width>
-     <height>27</height>
+     <height>28</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCamera">
@@ -48,6 +48,8 @@
      <string>&amp;Main</string>
     </property>
     <addaction name="action_Quit"/>
+    <addaction name="actionAbout"/>
+    <addaction name="actionAbout_Qt"/>
    </widget>
    <widget class="QMenu" name="menuTelescope">
     <property name="title">
@@ -451,6 +453,16 @@
    </property>
    <property name="text">
     <string>Sequences &amp;Editor</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About Galaxy Hunter</string>
+   </property>
+  </action>
+  <action name="actionAbout_Qt">
+   <property name="text">
+    <string>About Qt</string>
    </property>
   </action>
  </widget>
