--- a/dslr-qt-shooter/ui/camera_setup.ui
+++ b/dslr-qt-shooter/ui/camera_setup.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>552</width>
-    <height>667</height>
+    <height>423</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -75,13 +75,6 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="1">
-    <widget class="QLabel" name="imageFormatLabel">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="0" colspan="2">
     <widget class="QComboBox" name="shoot_mode">
      <item>
@@ -101,25 +94,19 @@
      </item>
     </widget>
    </item>
+   <item row="9" column="1">
+    <widget class="QLabel" name="imageFormatLabel">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Shoot Mode</string>
      </property>
     </widget>
-   </item>
-   <item row="13" column="0">
-    <spacer name="verticalSpacer_3">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>239</height>
-      </size>
-     </property>
-    </spacer>
    </item>
    <item row="11" column="0">
     <widget class="QLabel" name="label_10">
@@ -208,6 +195,19 @@
      </layout>
     </widget>
    </item>
+   <item row="13" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
   </layout>
   <zorder>label_4</zorder>
   <zorder>shutterSpeedLabel</zorder>
@@ -218,11 +218,11 @@
   <zorder>label_5</zorder>
   <zorder>label_6</zorder>
   <zorder>manualExposureLabel</zorder>
-  <zorder>verticalSpacer_3</zorder>
   <zorder>label_10</zorder>
   <zorder>shoot_mode</zorder>
   <zorder>groupBox</zorder>
   <zorder>repeated_shots_settings</zorder>
+  <zorder>verticalSpacer</zorder>
  </widget>
  <resources/>
  <connections/>
