--- a/src/ui/imagesettingsdialog.ui
+++ b/src/ui/imagesettingsdialog.ui
@@ -93,6 +93,13 @@
        </layout>
       </item>
       <item>
+       <widget class="QCheckBox" name="mirror_lock">
+        <property name="text">
+         <string>Use camera mirror lock</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
