--- a/src/ui/dslr_shooter_window.ui
+++ b/src/ui/dslr_shooter_window.ui
@@ -317,6 +317,21 @@
    <addaction name="actionPause_Shooting"/>
    <addaction name="actionStop_Shooting"/>
   </widget>
+  <widget class="QDockWidget" name="histogram">
+   <property name="windowTitle">
+    <string>Histogram</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>2</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_6">
+    <layout class="QGridLayout" name="gridLayout_3">
+     <item row="0" column="0">
+      <widget class="QCustomPlot" name="histogram_plot" native="true"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <action name="actionConnect_LinGuider">
    <property name="text">
     <string>Connect LinGuider</string>
@@ -447,8 +462,7 @@
    </property>
    <property name="icon">
     <iconset theme="camera-photo">
-     <normaloff/>
-    </iconset>
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Shoot</string>
@@ -460,8 +474,7 @@
    </property>
    <property name="icon">
     <iconset theme="media-playback-stop">
-     <normaloff/>
-    </iconset>
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Stop Shooting</string>
@@ -488,8 +501,7 @@
   <action name="actionPause_Shooting">
    <property name="icon">
     <iconset theme="media-playback-pause">
-     <normaloff/>
-    </iconset>
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Pause Shooting</string>
@@ -497,7 +509,8 @@
   </action>
   <action name="actionStart_Sequences">
    <property name="icon">
-    <iconset theme="media-playback-start"/>
+    <iconset theme="media-playback-start">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Start Sequences</string>
