Adding histogram widget

--- a/src/ui/dslr_shooter_window.ui
+++ b/src/ui/dslr_shooter_window.ui
@@ -33,7 +33,7 @@
      <x>0</x>
      <y>0</y>
      <width>772</width>
-     <height>27</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCamera">
@@ -325,7 +325,7 @@
    <addaction name="actionPause_Shooting"/>
    <addaction name="actionStop_Shooting"/>
   </widget>
-  <widget class="QDockWidget" name="histogram">
+  <widget class="QDockWidget" name="histogram_dock">
    <property name="windowTitle">
     <string>Histogram</string>
    </property>
@@ -335,7 +335,7 @@
    <widget class="QWidget" name="dockWidgetContents_6">
     <layout class="QGridLayout" name="gridLayout_3">
      <item row="0" column="0">
-      <widget class="QCustomPlot" name="histogram_plot" native="true"/>
+      <widget class="Histogram" name="histogram" native="true"/>
      </item>
     </layout>
    </widget>
@@ -537,7 +537,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Debayer</string>
+    <string>&amp;Debayer</string>
    </property>
   </action>
  </widget>
@@ -546,6 +546,12 @@
    <class>QCustomPlot</class>
    <extends>QWidget</extends>
    <header>qcustomplot.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Histogram</class>
+   <extends>QWidget</extends>
+   <header>histogram.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
